Fixing aligning of elements in the header

--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,6 @@ ul.nav li a {
   border: 8px solid #d3d3d3;
 }
 
-#self-portrait {
-  background-image: url('img/self.jpg');
-  width: 960px;
-  height: 340px;
-}
-
 .grid_12 {
   text-align: center;
   margin: 35px 0;
@@ -75,7 +69,9 @@ ul.nav li a {
   line-height: 2em;
 }
 
-
+.logo {
+  margin: 30px 0 0 20px;   
+}
 
 
 
